--- a/JuCheap.Service/JuCheap.Service.csproj
+++ b/JuCheap.Service/JuCheap.Service.csproj
@@ -35,9 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -59,6 +58,10 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -68,9 +71,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstracts\AutoMapperConfiguration.Partial.cs">
-      <DependentUpon>IService.tt</DependentUpon>
-    </Compile>
     <Compile Include="Abstracts\EmailPoolService.cs" />
     <Compile Include="Abstracts\EmailPoolService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
@@ -78,6 +78,7 @@
     <Compile Include="Abstracts\EmailReceiverService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
     </Compile>
+    <Compile Include="Abstracts\IBaseService.cs" />
     <Compile Include="Abstracts\IEmailPoolService.cs" />
     <Compile Include="Abstracts\IEmailPoolService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
@@ -110,7 +111,9 @@
     <Compile Include="Abstracts\LoginLogService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
     </Compile>
+    <Compile Include="Abstracts\Mall\IServices\IStoreIndustriesService.cs" />
     <Compile Include="Abstracts\Mall\IServices\IStoreRankService.cs" />
+    <Compile Include="Abstracts\Mall\Services\StoreIndustriesService.cs" />
     <Compile Include="Abstracts\Mall\Services\StoreRankService.cs" />
     <Compile Include="Abstracts\MenuService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
@@ -132,7 +135,7 @@
     <Compile Include="Abstracts\UserService.Partial.cs">
       <DependentUpon>IService.tt</DependentUpon>
     </Compile>
-    <Compile Include="AutoMapperConfiguration.cs" />
+    <Compile Include="AutoMapperT.cs" />
     <Compile Include="Config\EmailConfiguration.cs" />
     <Compile Include="Dto\BaseDto.cs" />
     <Compile Include="Dto\EmailPoolDto.cs" />
@@ -150,6 +153,7 @@
     <Compile Include="Dto\MenuDto.cs" />
     <Compile Include="Dto\RoleMenuDto.cs" />
     <Compile Include="Dto\RoleDto.cs" />
+    <Compile Include="Dto\StoreIndustriesDto.cs" />
     <Compile Include="Dto\UserRoleDto.cs" />
     <Compile Include="Dto\UserDto.cs" />
     <Compile Include="Enum\EmailReceiverType.cs" />
