--- a/JuCheap.Service/packages.config
+++ b/JuCheap.Service/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="4.1.1" targetFramework="net451" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net451" />
   <package id="Mehdime.Entity" version="1.0.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
