--- a/JuCheap.Web/Areas/Adm/Views/web.config
+++ b/JuCheap.Web/Areas/Adm/Views/web.config
@@ -17,7 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
-        <add namespace="JuCheap.Web" />        
+        <add namespace="JuCheap.Web" />
+        <add namespace="JuCheap.Service.Dto" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
