--- a/JuCheap.Web/JuCheap.Web.csproj
+++ b/JuCheap.Web/JuCheap.Web.csproj
@@ -63,6 +63,9 @@
       <HintPath>..\packages\Autofac.Mvc5.3.3.4\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Logging, Version=3.3.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\packages\Common.Logging.3.3.0\lib\net40\Common.Logging.dll</HintPath>
       <Private>True</Private>
@@ -129,6 +132,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -636,6 +643,7 @@
     <Compile Include="Areas\Adm\Controllers\UserController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Extension\AutoMapper.cs" />
     <Compile Include="Filter\AuthFilter.cs" />
     <Compile Include="Filter\CommonExceptionFilter.cs" />
     <Compile Include="App_Code\JavascriptObfuscator.cs" />
@@ -652,7 +660,9 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
-    <Content Include="Areas\Adm\Views\web.config" />
+    <Content Include="Areas\Adm\Views\web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Areas\Adm\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Adm\Views\Control\Index.cshtml" />
     <Content Include="Areas\Adm\Views\User\Index.cshtml" />
@@ -704,6 +714,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Areas\Adm\Views\Shared\BaiduTongji.cshtml" />
+    <Content Include="Areas\Adm\Views\StoreIndustries\Index.cshtml" />
+    <Content Include="Areas\Adm\Views\StoreIndustries\Add.cshtml" />
     <None Include="job_scheduling_data_2_0.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -779,7 +791,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Adm\Models\" />
-    <Folder Include="Areas\Adm\Views\StoreIndustries\" />
     <Folder Include="Areas\Adm\Views\StoreRank\" />
     <Folder Include="LogFile\" />
   </ItemGroup>
@@ -787,6 +798,10 @@
     <ProjectReference Include="..\JuCheap.Core\JuCheap.Core.csproj">
       <Project>{55aa4b79-e6e7-4444-95d1-d67354a36ebb}</Project>
       <Name>JuCheap.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JuCheap.Entity\JuCheap.Entity.csproj">
+      <Project>{7DC964B7-0B90-4FF2-91CC-0AB5462741AA}</Project>
+      <Name>JuCheap.Entity</Name>
     </ProjectReference>
     <ProjectReference Include="..\JuCheap.Service\JuCheap.Service.csproj">
       <Project>{f6160cd1-d241-4293-92f5-451749c7fc3a}</Project>
