--- a/JuCheap.Web/packages.config
+++ b/JuCheap.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net451" />
   <package id="Autofac.Extras.Quartz" version="1.7.0.0" targetFramework="net451" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.3.0" targetFramework="net451" />
   <package id="Common.Logging.Core" version="3.3.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
@@ -28,5 +29,6 @@
   <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
   <package id="Quartz" version="2.3.3" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
